Fix version 2.8.4, change java compilation back to java 17 instead of 20. fix Pretty Print and writing to file